<resources>
    <string name="app_name">vitHost</string>
    <string name="action_settings">Settings</string>
    <string name="update_button">update</string>
    <string name="update_hosts">select ip update hosts</string>
    <string name="clear_hosts">clear hosts</string>
    <string name="load_hosts">loads hosts</string>
    <string name="backup_hosts">backup hosts</string>
    <string name="start_vpn">start vpn</string>
    <string name="stop_vpn">stop vpn</string>
    <string name="re_select_hosts">Re-select Hosts File</string>
    <string name="select_hosts">Select Hosts File</string>
    <string name="info">supports wildcard DNS records,Example:\nabc.com\nm.abc.com\nweb.abc.com\n=>.abc.com</string>
    <string name="dialog_title">
        <font color="@color/primary_text">Please Select Hosts File</font>
    </string>
    <string name="dialog_message">
        <font color="@color/secondary_text">The Hosts File unselected or been deleted</font>
    </string>
    <string name="dialog_confirm">confirm</string>
    <string name="dialog_cancel">cancel</string>
    <string name="dns_server">8.8.8.8</string>
    <string name="file_select_error">Error ! System File Browser Not Find, Will Use Url Mode</string>
    <string name="permission_error">Error ! No Permission</string>
    <string name="fab_label_setting">Setting</string>
    <string name="fab_label_boot">On Startup</string>
    <string name="fab_label_donation">Donate</string>
    <string name="welcome">Your support is the greatest impetus for us.\nYou can support us through the following
        ways.
    </string>
    <string name="rate">Rate on the Store</string>
    <string name="alipay">Donate with Alipay</string>
    <string name="wechat">Donate with WeChat</string>
    <string name="paypal">Donate with Paypal</string>
    <string name="googleplay">Donate with Google Play</string>
    <string name="googleplay2">Donate $2 with Google Play</string>
    <string name="googleplay4">Donate $4 with Google Play</string>
    <string name="googleplay6">Donate $6 with Google Play</string>
    <string name="googleplay8">Donate $8 with Google Play</string>
    <string name="googleplay10">Donate $10 with Google Play</string>
    <string name="bitcoin">Donate with Bitcoin</string>
    <string name="tip_bitcoin">bitcoin address has copy to the clipboard</string>
    <string name="radio_local">from local</string>
    <string name="radio_net">from internet</string>
    <string name="url_error">URL input is incorrect</string>
    <string name="dns4_error">DNS input is incorrect</string>
    <string name="down_success">Download Success Get %d Host Records</string>
    <string name="down_error">Download Failed</string>
    <string name="runing_notice">Virtual Hosts Is Running</string>

    <string name="pref_ps_set_hosts_url">set net hosts url</string>
    <string name="pref_ps_set_cus_dns">set custom dns</string>

    <string name="title_pref_remote_hosts">remote hosts url</string>
    <string name="pref_remote_hosts">remote hosts url</string>
    <string name="pref_is_net">use net hosts</string>
    <string name="pref_dns">custom dns</string>
    <string name="pref_dns_title">use custom dns</string>
    <string name="download_alert">Downloading File...</string>

    <string name="no_net_record">warning! net hosts file no dns record, please check</string>
    <string name="no_local_record">warning! local hosts file no dns record, please check</string>

    <string name="btn_modify_hosts">Modify Hosts</string>
    <string name="menu_edit_hosts">Edit</string>
    <string name="menu_new_hosts">New</string>
    <string name="menu_import_hosts">Import from file</string>
    <string name="menu_download_hosts">Download from URL</string>
    <string name="hosts_source_info">Loaded: %1$s (%2$d records)</string>
    <string name="hosts_source_internal">internal file</string>
    <string name="hosts_source_net">remote URL</string>
    <string name="hosts_source_local">local file</string>
    <string name="hosts_source_none">none</string>
    <string name="editor_title">Hosts Editor</string>
    <string name="editor_title_new">New Hosts</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="search_hint">Find text...</string>
    <string name="search_replace_hint">Replace with...</string>
    <string name="search_prev">Previous</string>
    <string name="search_next">Next</string>
    <string name="search_replace">Replace</string>
    <string name="search_replace_all">Replace All</string>
    <string name="quick_insert_title">Insert Template</string>
    <string name="quick_insert_local">127.0.0.1 .local</string>
    <string name="quick_insert_test">127.0.0.1 .test</string>
    <string name="quick_insert_block">0.0.0.0 .blocked</string>
    <string name="quick_insert_custom">Custom...</string>
    <string name="quick_insert_custom_title">Custom Record</string>
    <string name="quick_insert_custom_ip">IP Address</string>
    <string name="quick_insert_custom_domain">Domain</string>
    <string name="save_success">Saved successfully</string>
    <string name="save_failed">Save failed, please retry</string>
    <string name="import_failed">Import failed</string>
    <string name="import_success">Imported %1$d host records</string>
    <string name="download_failed">Download failed</string>
    <string name="download_success">Downloaded %1$d host records</string>
    <string name="download_url_hint">Enter hosts file URL</string>
    <string name="no_hosts_loaded">No hosts file loaded yet</string>

</resources>
