<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_undo"
        android:title="@string/action_undo"
        android:icon="@android:drawable/ic_menu_revert"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_redo"
        android:title="@string/action_redo"
        android:icon="@android:drawable/ic_menu_upload"
        app:showAsAction="always" />
</menu>
